# E-Commerce-Product-Error-Detection

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  analysis.ipynb  bpe_nb_model.py  ensemble.py  ensemble_workflow.md  model_details.md  predict_ensemble.py  product_labels.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_analysis.ipynb  train_ensemble.py  unique_products_sample.csv
.github/workflows/: ci.yml
artifacts/: bpe_tokenizer.json
artifacts/analysis/disagree_with_nature/: all_models_disagree_with_nature_100.csv  ensemble_disagree_nature.csv
artifacts/camembert_logreg/: camembert_logreg.joblib
artifacts/confidence_analysis/: confidence_thresholds_summary.csv
artifacts/disagree_with_nature/: camembert_logreg_disagree_nature.csv  knn_conformity_disagree_nature.csv  sent_emb_logreg_disagree_nature.csv  tfidf_logreg_cleanlab_disagree_nature.csv
artifacts/knn_conformity/: knn_conformity.joblib
artifacts/llm_judgments/: camembert_logreg_judgments.csv  ensemble_judgments.csv  knn_conformity_judgments.csv  sent_emb_logreg_judgments.csv  summary.csv  tfidf_logreg_cleanlab_judgments.csv
artifacts/models/sent_emb_logreg/: emb_logreg.joblib
artifacts/results/: result_sample_extracted.csv
artifacts/sent_emb_logreg/: emb_logreg.joblib
artifacts/standalone_correct_examples/: camembert_logreg_examples.csv  ensemble_examples.csv  knn_conformity_examples.csv  sent_emb_logreg_examples.csv  tfidf_logreg_cleanlab_examples.csv
models/: __init__.py  base.py  camembert_logreg.py  emb_logreg.py  knn_conformity.py  tfidf_logreg_cleanlab.py
scripts/: analyze_judgments.py  extract_dims_colors.py  llm_judge.py  nature_frequency_analysis.py
scripts/ensemble/: ensemble.py  predict_ensemble.py  train_ensemble.py
src/config/: __init__.py  constants.py  settings.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/test_ensemble/: __init__.py  test_ensemble.py
tests/test_models/: __init__.py  test_base.py  test_camembert.py  test_emb_logreg.py  test_knn.py  test_tfidf.py
